--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
                   <span class="icon-envelope mr-2"></span>
                   <span class="d-none d-md-inline-block">entrepreneursocietyhku@gmail.com</span>
                 </a>
-                <!-- <a href="#" class="d-flex align-items-center">
-                  <span class="icon-phone mr-2"></span>
-                  <span class="d-none d-md-inline-block">+1 234 4567 8910</span>
-                </a> -->
+              
               </div>
             </div>
           </div>
@@ -89,7 +86,7 @@
                       <a href="#about-section" class="nav-link">About Us</a>
                     </li>
                     <li>
-                      <a href="#projects-section" class="nav-link">Articles</a>
+                      <a href="articles.html" class="nav-link">Articles</a>
                     </li>
                     <li><a href="#news-section" class="nav-link">News</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
@@ -206,7 +203,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
@@ -224,7 +221,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
@@ -243,8 +240,8 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
-                  <a href="#"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/louis-cheung-589673179"><span class="icon-linkedin"></span></a>
+                  <a href="https://www.instagram.com/storyofclt/"><span class="icon-instagram"></span></a>
                 </div>
               </div>
               <h2>Simon Tamanag</h2>
@@ -261,7 +258,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
@@ -279,7 +276,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
@@ -297,7 +294,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
@@ -315,7 +312,7 @@
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
-                  <a href="#"><span class="icon-twitter"></span></a>
+                  <a href="#"><span class="icon-linkedin"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
