--- a/articles.html
+++ b/articles.html
@@ -1,29 +1,32 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>ESo Official Website</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+<head>
+  <title>ESo Official Website</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
 
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
-  </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+
+
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
   <div id="overlayer"></div>
   <div class="loader">
@@ -79,16 +82,16 @@
 
                   <ul class="site-menu main-menu js-clone-nav d-none d-lg-block">
                     <li>
-                      <a href="#home-section" class="nav-link">Home</a>
+                      <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="has-children">
-                      <a href="#about-section" class="nav-link">About Us</a>
+                      <a href="index.html#about-section" class="nav-link">About Us</a>
                     </li>
                     <li>
-                      <a href="#projects-section" class="nav-link">Articles</a>
+                      <a href="articles.html" class="nav-link">Articles</a>
                     </li>
                     <li><a href="#news-section" class="nav-link">News</a></li>
-                    <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                    <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
                   </ul>
                 </div>
               </nav>
@@ -97,6 +100,9 @@
         </div>
       </div>
     </div>
+
+
+<!-- end of header             -->
 
     <div class="site-blocks-cover overlay" style="background-image: url(images/eso-pic.jpg);" data-aos="fade" data-stellar-background-ratio="0.5"id="home-section">
       <div class="container">
@@ -121,7 +127,7 @@
     <div class="row" style="margin: 40px auto 20px">
       <div class="col-md-12">
         <div class="section-title">
-          <h2>Recent Posts</h2>
+          <h2>Latest News & Posts</h2>
         </div>
       </div>
 
@@ -173,150 +179,137 @@
 </div>
 
 
-    <footer class="site-footer border-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 mb-5 mb-lg-0">
-            <div class="row mb-5">
-              <div class="col-12">
-                <h3 class="footer-heading mb-4">About Us</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non rem iusto nisi, eum vitae quas culpa fugiat itaque aliquam nulla, accusamus aspernatur molestias recusandae voluptates ratione dolores deleniti velit. Corporis.</p>
-              </div>
-            </div>
-            <div class="row mb-5">
-              <div class="col-md-12">
-                <h3 class="footer-heading mb-4">Navigation</h3>
-              </div>
-              <div class="col-md-6 col-lg-6">
-                <ul class="list-unstyled">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Team</a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-6">
-                <ul class="list-unstyled">
-                  <li><a href="#">Interior Design</a></li>
-                  <li><a href="#">Architect</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Membership</a></li>
-                </ul>
-              </div>
-            </div>
+<!-- start of footer -->
 
+<footer class="site-footer border-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="row mb-5">
+          <div class="col-12">
+            <h3 class="footer-heading mb-4">About Us</h3>
+            <p>The Entrepreneur Society is a student-led, non-profit committee that aims to foster the entrepreneurial spirit among the HKU community. </p>
+            <br>
+            <p>We create a platform for ideas to be shared, developed and realized with cross-faculty collaboration as our bedrock. Through hosting interactive activities that encourage early-stage ideation to workshops that validate business ideas, we aim to provide innovative solutions to societal problems.</p>
 
           </div>
-          <div class="col-lg-4">
-
-
-            <div class="mb-5">
-              <h3 class="footer-heading mb-4">Recent News</h3>
-              <div class="block-25">
-                <ul class="list-unstyled">
-                  <li class="mb-3">
-                    <a href="#" class="d-flex">
-                      <figure class="image mr-4">
-                        <img src="images/img_2.jpg" alt="" class="img-fluid">
-                      </figure>
-                      <div class="text">
-                        <span class="small text-uppercase date">Jan 16, 2018</span>
-                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mb-3">
-                    <a href="#" class="d-flex">
-                      <figure class="image mr-4">
-                        <img src="images/img_3.jpg" alt="" class="img-fluid">
-                      </figure>
-                      <div class="text">
-                        <span class="small text-uppercase date">Jan 16, 2018</span>
-                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mb-3">
-                    <a href="#" class="d-flex">
-                      <figure class="image mr-4">
-                        <img src="images/img_4.jpg" alt="" class="img-fluid">
-                      </figure>
-                      <div class="text">
-                        <span class="small text-uppercase date">Jan 16, 2018</span>
-                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-
-
-          <div class="col-lg-4 mb-5 mb-lg-0">
-
-            <div class="mb-5">
-              <h3 class="footer-heading mb-2">Subscribe Newsletter</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit minima minus odio.</p>
-
-              <form action="#" method="post" class="form-subscribe">
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control border-white text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-primary" type="button" id="button-addon2">Send</button>
-                  </div>
-                </div>
-              </form>
-
-            </div>
-
-            <div class="row">
-              <div class="col-md-12">
-                <h3 class="footer-heading mb-4">Follow Us</h3>
-
-                <div>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-
         </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Entrepreneur Society HKU
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
 
-        </div>
+
       </div>
-    </footer>
+      <div class="col-lg-4">
+
+        <div class="row mb-5">
+          <div class="col-md-12">
+            <h3 class="footer-heading mb-4">Navigation</h3>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html#about-section">About Us</a></li>
+              <li><a href="articles.html">Articles</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <ul class="list-unstyled">
+              <li><a href="index.html#news-section">News</a></li>
+              <li><a href="index.html#contact-section">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="footer-heading mb-4">Follow Us</h3>
+
+            <div>
+              <a href="https://www.facebook.com/entrepreneursocietyhku/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+              <a href="https://instagram.com/eso_hku?igshid=1grmhpwdjvrqf" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/company/26598823" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+            </div>
+          </div>
+        </div>
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
 
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/main.js"></script>
+      <div class="col-lg-4 mb-5 mb-lg-0">
+
+        <div class="mb-5">
+          <h3 class="footer-heading mb-4">Recent News</h3>
+          <div class="block-25">
+            <ul class="list-unstyled">
+              <li class="mb-3">
+                <a href="#" class="d-flex">
+                  <figure class="image mr-4">
+                    <img src="images/eso-garage.jpg" alt="" class="img-fluid">
+                  </figure>
+                  <div class="text">
+                    <span class="small text-uppercase date">Jan 16, 2018</span>
+                    <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
+                  </div>
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#" class="d-flex">
+                  <figure class="image mr-4">
+                    <img src="images/eso-design-thinking.jpg" alt="" class="img-fluid">
+                  </figure>
+                  <div class="text">
+                    <span class="small text-uppercase date">Jan 16, 2018</span>
+                    <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
+                  </div>
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#" class="d-flex">
+                  <figure class="image mr-4">
+                    <img src="images/img_4.jpg" alt="" class="img-fluid">
+                  </figure>
+                  <div class="text">
+                    <span class="small text-uppercase date">Jan 16, 2018</span>
+                    <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
 
 
-  </body>
-  </html>
+
+      </div>
+
+    </div>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Entrepreneur Society HKU
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
+
+    </div>
+
+</footer>
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.sticky.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/main.js"></script>
+
+
+</body>
+</html>
