--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
       <div class="col-md-12">
         <p>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Entrepreneur Society HKU
+        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Entrepreneur Society HKU | Created by Louis Cheung
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </p>
       </div>
