--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
+  <meta name="description" content="ESo HKU is a student-led society, that builds and bond a community for entrepreneurial people. In ESo, we exchange ideas to empower each others' growth.">
+  <meta name="keywords" content="The Community for Entrepreneurs.">
+  <meta name="author" content="Louis Cheung">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
