--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <meta name="description" content="ESo HKU is a student-led society, that builds and bond a community for entrepreneurial people. In ESo, we exchange ideas to empower each others' growth.">
   <meta name="keywords" content="The Community for Entrepreneurs.">
-  <meta name="author" content="Louis Cheung">
+  <meta name="author" content="Lousi Cheung">
+  <meta property="og:image" content="images/eso-web.JPG">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
