fix article navbar

--- a/articles.html
+++ b/articles.html
@@ -85,16 +85,20 @@
 
                   <ul class="site-menu main-menu js-clone-nav d-none d-lg-block">
                     <li>
-                      <a href="index.html" class="nav-link">Home</a>
+                      <a href="#" onClick="window.open('index.html', '_self')">Home</a>
                     </li>
                     <li class="has-children">
-                      <a href="index.html#about-section" class="nav-link">About Us</a>
+                      <a href="#" onClick="window.open('index.html#about-section', '_self')">About Us</a>
                     </li>
                     <li>
                       <a href="#" onClick="window.open('articles.html', '_self')">Articles</a>
                     </li>
-                    <li><a href="#news-section" class="nav-link">News</a></li>
-                    <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html#news-section', '_self')">News</a>
+                    </li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html#contact-section', '_self')">Contact</a>
+                    </li>
                   </ul>
                 </div>
               </nav>
@@ -210,15 +214,25 @@
                 </div>
                 <div class="col-md-6 col-lg-6">
                   <ul class="list-unstyled">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about-section">About Us</a></li>
-                    <li><a href="#" onClick="window.open('articles.html', '_self')">Articles</a></li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html', '_self')">Home</a>
+                    </li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html#about-section', '_self')">About Us</a>
+                    </li>
+                    <li>
+                      <a href="#" onClick="window.open('articles.html', '_self')">Articles</a>
+                    </li>
                   </ul>
                 </div>
                 <div class="col-md-6 col-lg-6">
                   <ul class="list-unstyled">
-                    <li><a href="index.html#news-section">News</a></li>
-                    <li><a href="index.html#contact-section">Contact</a></li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html#news-section', '_self')">News</a>
+                    </li>
+                    <li>
+                      <a href="#" onClick="window.open('index.html#contact-section', '_self')">Contact</a>
+                    </li>
                   </ul>
                 </div>
               </div>
