--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <!-- end of header -->
 
-    <div class="site-blocks-cover overlay" style="background-image: url(https://images.pexels.com/photos/2909067/pexels-photo-2909067.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background-image: url(images/eso-testing1.jpeg);" data-aos="fade"
       data-stellar-background-ratio="0.5" id="home-section">
       <div class="container">
         <div class="row align-items-center text-center justify-content-center">
