17 May 2020 - Updated Articles

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           <div class="testimony px-5">
             <img src="images/ariel.jpeg" alt="Image" class="img-fluid">
             <h3>Ms. Ariel Wong</h3>
-            <span class="sub-title">Content Creating Advisor</span>
+            <span class="sub-title">Publication Student Advisor</span>
             <p><em>Ariel is a HKU Law student who is eager to gain a more detailed understanding of Technology.
                 Believing in joining various programmes and competitions, he can have a chance to pursue the advanced
                 technology. He will surely unravel the knowledge diligently and make contributions to the discipline for
@@ -489,26 +489,20 @@
           </div>
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="#" class="d-block figure">
-                <img src="images/eso-showcase.jpg" alt="Image" class="img-fluid">
+              <a href="hkx-interview.html" class="d-block figure">
+                <img src="images/hkx-interview.jpeg" alt="Image" class="img-fluid">
               </a>
-              <span class="text-muted d-block mb-1">9, November 2019</span>
-              <h3><a href="#">ESo Ideation Showcase</a></h3>
+              <span class="text-muted d-block mb-1">17, May 2020</span>
+              <h3><a href="hkx-interview.html">As students, how can we survive the pandemic?</a></h3>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="#" class="d-block figure">
-                <img src="images/eso-garage.jpg" alt="Image" class="img-fluid">
+              <a href="hollow-interview.html" class="d-block figure">
+                <img src="images/hollow-poster.jpg" alt="Image" class="img-fluid">
               </a>
-              <span class="text-muted d-block mb-1">20, September 2019</span>
-              <h3><a href="#">Entrepreneur Night - How to Build a Multinational Business</a></h3>
+              <span class="text-muted d-block mb-1">15, May 2020</span>
+              <h3><a href="hollow-interview.html">Hollow: a tool that brings therapy to a next level using big data and AI</a></h3>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="#" class="d-block figure">
-                <img src="images/eso-design-thinking.jpg" alt="Image" class="img-fluid">
-              </a>
-              <span class="text-muted d-block mb-1">28, September 2019</span>
-              <h3><a href="#">Design Thinking Workshop </a></h3>
-            </div>
+
 
           </div>
           <div class="row mt-5 text-center">
@@ -608,35 +602,24 @@
             <div class="block-25">
               <ul class="list-unstyled">
                 <li class="mb-3">
-                  <a href="#" class="d-flex">
+                  <a href="hkx-interview.html" class="d-flex">
                     <figure class="image mr-4">
-                      <img src="images/eso-garage.jpg" alt="" class="img-fluid">
+                      <img src="images/hkx-interview.jpeg" alt="" class="img-fluid">
                     </figure>
                     <div class="text">
-                      <span class="small text-uppercase date">Jan 16, 2018</span>
-                      <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
+                      <span class="small text-uppercase date">17, May 2020</span>
+                      <h3 class="heading font-weight-light">As students, how can we survive the pandemic?</h3>
                     </div>
                   </a>
                 </li>
                 <li class="mb-3">
-                  <a href="#" class="d-flex">
+                  <a href="hollow-interview.html" class="d-flex">
                     <figure class="image mr-4">
-                      <img src="images/eso-design-thinking.jpg" alt="" class="img-fluid">
+                      <img src="images/hollow-poster.JPG" alt="" class="img-fluid">
                     </figure>
                     <div class="text">
-                      <span class="small text-uppercase date">Jan 16, 2018</span>
-                      <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
-                    </div>
-                  </a>
-                </li>
-                <li class="mb-3">
-                  <a href="#" class="d-flex">
-                    <figure class="image mr-4">
-                      <img src="images/img_4.jpg" alt="" class="img-fluid">
-                    </figure>
-                    <div class="text">
-                      <span class="small text-uppercase date">Jan 16, 2018</span>
-                      <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur elit</h3>
+                      <span class="small text-uppercase date">15, May 2020</span>
+                      <h3 class="heading font-weight-light">Hollow: a tool that brings therapy to a next level using big data and AI</h3>
                     </div>
                   </a>
                 </li>
