updated names of "Hollo"

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 <img src="images/hollow-poster.jpg" alt="Image" class="img-fluid">
               </a>
               <span class="text-muted d-block mb-1">15, May 2020</span>
-              <h3><a href="hollow-interview.html">Hollow: a tool that brings therapy to a next level using big data and AI</a></h3>
+              <h3><a href="hollow-interview.html">Hollo: a tool that brings therapy to a next level using big data and AI</a></h3>
             </div>
 
 
@@ -619,7 +619,7 @@
                     </figure>
                     <div class="text">
                       <span class="small text-uppercase date">15, May 2020</span>
-                      <h3 class="heading font-weight-light">Hollow: a tool that brings therapy to a next level using big data and AI</h3>
+                      <h3 class="heading font-weight-light">Hollo: a tool that brings therapy to a next level using big data and AI</h3>
                     </div>
                   </a>
                 </li>
