--- a/hkx-interview.html
+++ b/hkx-interview.html
@@ -281,7 +281,7 @@
                     </figure>
                     <div class="text">
                       <span class="small text-uppercase date">15, May 2020</span>
-                      <h3 class="heading font-weight-light">Hollow: a tool that brings therapy to a next level using big data and AI</h3>
+                      <h3 class="heading font-weight-light">Hollo: a tool that brings therapy to a next level using big data and AI</h3>
                     </div>
                   </a>
                 </li>
