--- a/index.html
+++ b/index.html
@@ -489,18 +489,18 @@
           </div>
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="hkx-interview.html" class="d-block figure">
+              <a href="hkx.html" class="d-block figure">
                 <img src="images/hkx-interview.jpeg" alt="Image" class="img-fluid">
               </a>
               <span class="text-muted d-block mb-1">17, May 2020</span>
-              <h3><a href="hkx-interview.html">As students, how can we survive the pandemic?</a></h3>
+              <h3><a href="hkx.html">As students, how can we survive the pandemic?</a></h3>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="hollow-interview.html" class="d-block figure">
+              <a href="hollo.html" class="d-block figure">
                 <img src="images/hollow-poster.jpg" alt="Image" class="img-fluid">
               </a>
               <span class="text-muted d-block mb-1">15, May 2020</span>
-              <h3><a href="hollow-interview.html">Hollo: a tool that brings therapy to a next level using big data and AI</a></h3>
+              <h3><a href="hollo.html">Hollo: a tool that brings therapy to a next level using big data and AI</a></h3>
             </div>
 
 
@@ -602,7 +602,7 @@
             <div class="block-25">
               <ul class="list-unstyled">
                 <li class="mb-3">
-                  <a href="hkx-interview.html" class="d-flex">
+                  <a href="hkx.html" class="d-flex">
                     <figure class="image mr-4">
                       <img src="images/hkx-interview.jpeg" alt="" class="img-fluid">
                     </figure>
@@ -613,7 +613,7 @@
                   </a>
                 </li>
                 <li class="mb-3">
-                  <a href="hollow-interview.html" class="d-flex">
+                  <a href="hollo.html" class="d-flex">
                     <figure class="image mr-4">
                       <img src="images/hollow-poster.JPG" alt="" class="img-fluid">
                     </figure>
