--- a/index.html
+++ b/index.html
@@ -602,6 +602,28 @@
             <div class="block-25">
               <ul class="list-unstyled">
                 <li class="mb-3">
+                  <a href="bestTop.html" class="d-flex">
+                    <figure class="image mr-4">
+                      <img src="images/bestTop.jpg" alt="" class="img-fluid">
+                    </figure>
+                    <div class="text">
+                      <span class="small text-uppercase date">8, Aug 2020</span>
+                      <h3 class="heading font-weight-light">How to Stand Out as a Startup - BestTop Consulting Pte. Ltd.</h3>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-3">
+                  <a href="newNormal.html" class="d-flex">
+                    <figure class="image mr-4">
+                      <img src="images/newNormal.jpg" alt="" class="img-fluid">
+                    </figure>
+                    <div class="text">
+                      <span class="small text-uppercase date">12, Aug 2020</span>
+                      <h3 class="heading font-weight-light">‘The New Normal’: What is it and how do we cope with it?</h3>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-3">
                   <a href="hkx.html" class="d-flex">
                     <figure class="image mr-4">
                       <img src="images/hkx-interview.jpeg" alt="" class="img-fluid">
@@ -609,17 +631,6 @@
                     <div class="text">
                       <span class="small text-uppercase date">17, May 2020</span>
                       <h3 class="heading font-weight-light">As students, how can we survive the pandemic?</h3>
-                    </div>
-                  </a>
-                </li>
-                <li class="mb-3">
-                  <a href="hollo.html" class="d-flex">
-                    <figure class="image mr-4">
-                      <img src="images/hollow-poster.JPG" alt="" class="img-fluid">
-                    </figure>
-                    <div class="text">
-                      <span class="small text-uppercase date">15, May 2020</span>
-                      <h3 class="heading font-weight-light">Hollo: a tool that brings therapy to a next level using big data and AI</h3>
                     </div>
                   </a>
                 </li>
