added to latest news

--- a/index.html
+++ b/index.html
@@ -489,6 +489,20 @@
           </div>
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
+              <a href="newNormal.html" class="d-block figure">
+                <img src="images/newNormal.jpg" alt="Image" class="img-fluid">
+              </a>
+              <span class="text-muted d-block mb-1">12, Aug 2020</span>
+              <h3><a href="newNormal.html">‘The New Normal’: What is it and how do we cope with it?</a></h3>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
+              <a href="bestTop.html" class="d-block figure">
+                <img src="images/bestTop.jpg" alt="Image" class="img-fluid">
+              </a>
+              <span class="text-muted d-block mb-1">8, Aug 2020</span>
+              <h3><a href="bestTop.html">How to Stand Out during the Pandemic - BestTop Consulting Pte. Ltd.</a></h3>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
               <a href="hkx.html" class="d-block figure">
                 <img src="images/hkx-interview.jpeg" alt="Image" class="img-fluid">
               </a>
