corrected texts for recent news

--- a/hollo.html
+++ b/hollo.html
@@ -239,7 +239,7 @@
                     </figure>
                     <div class="text">
                       <span class="small text-uppercase date">8, Aug 2020</span>
-                      <h3 class="heading font-weight-light">How to Stand Out as a Startup - BestTop Consulting Pte. Ltd.</h3>
+                      <h3 class="heading font-weight-light">How to Stand Out during Pandemic - BestTop Consulting Pte. Ltd.</h3>
                     </div>
                   </a>
                 </li>
